--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
+    "flickity": "^2.0.10",
     "gotrue-js": "^0.9.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -45,6 +46,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-uncss": "^0.14.0",
     "react": "15.6.1",
+    "siema": "^1.4.9",
     "uncss": "^0.14.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
