Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -1,10 +1,11 @@
 logo1: Thao
 logo2: Binh
 logo3: Land
-phone: 22222
+phone: '44444'
 viber: 11111
 zalo: 3333333
 address: 321 HCM
 email: admin@thaobinhland.com
 website: thaobinhland.com
-mapUrl: https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1959.4698311001562!2d106.77774597964026!3d10.815929567275754!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1514061126352
+mapUrl: >-
+  https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1959.4698311001562!2d106.77774597964026!3d10.815929567275754!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1514061126352
