Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -2,8 +2,8 @@ logo1: Thao
 logo2: Binh
 logo3: Land
 phone: '77777777'
-viber: 11111
-zalo: 3333333
+viber: ''
+zalo: ''
 address: 321 HCM
 email: admin@thaobinhland.com
 website: thaobinhland.com
