Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -1,7 +1,7 @@
 logo1: Thao
 logo2: Binh
 logo3: Land
-phone: '77777777'
+phone: 01666666732 hoac 01222228298
 viber: ''
 zalo: ''
 address: 321 HCM
