Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -4,7 +4,7 @@ logo3: Land
 phone: 01666666732 & 01222228298
 viber: ''
 zalo: ''
-address: 321 HCM
+address: 'Duong 51, khu PHU CHANH C, PHU TAN , THU DAU MOT ,BD'
 email: admin@thaobinhland.com
 website: thaobinhland.com
 mapUrl: >-
