Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -3,7 +3,7 @@ logo2: Binh
 logo3: Land
 phone: 01666666732 & 01222228298
 viber: ''
-zalo: ''
+zalo: 01222228298
 address: 'Duong 51, khu PHU CHANH C, PHU TAN ,      THU DAU MOT ,BINH DUONG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
