--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -4,7 +4,7 @@ logo3: Land
 phone: 01666666732 & 01222228298
 viber: ''
 zalo: 01222228298
-address: 'Duong 51, khu PHU CHANH C, PHU TAN ,      THU DAU MOT ,BINH DUONG '
+address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
 mapUrl: >-
