--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -1,9 +1,10 @@
 logo1: Thao
 logo2: Binh
 logo3: Land
-phone: 01666666732 & 01222228298
+phone: "01666666732"
+phone2: "01222228298"
 viber: ''
-zalo: 01222228298
+zalo: "01222228298"
 address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
