--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -1,12 +1,11 @@
 logo1: Thao
 logo2: Binh
 logo3: Land
-phone: "01666666732"
-phone2: "01222228298"
+phone: '01666666732'
+phone2: 01222228298
 viber: ''
-zalo: "01222228298"
+zalo: 01222228298
 address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
-mapUrl: >-
-  https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d979.5711815644722!2d106.65609488260687!3d10.865935181655452!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529c30488df7b%3A0x6671e50df1c8feeb!2zUXXDoW4gQW5oIFTDuW5n!5e0!3m2!1sen!2s!4v1514377496721
+mapUrl: 'https://www.google.com/maps/@11.0530015,106.7081218,17z'
