Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -8,4 +8,4 @@ zalo: 01222228298
 address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
-mapUrl: 'www.google.com/maps/@11.0530015,106.7081218,17z'
+mapUrl: 'https://www.google.com/maps/@11.0530015,106.7081218,17z'
