Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -1,8 +1,8 @@
 logo1: Thao
 logo2: Binh
 logo3: Land
-phone: 01222228298
-phone2: '01666666732'
+phone: '        01222228298'
+phone2: '        01666666732'
 viber: ''
 zalo: ''
 address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
