Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -8,4 +8,8 @@ zalo: ''
 address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
-mapUrl: 'https://www.google.com/maps/@11.0550391,106.7057544,17z'
+mapUrl: >-
+  <iframe
+  src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3915.7810043574927!2d106.70575441073898!3d11.055039131835253!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1515550348152"
+  width="600" height="450" frameborder="0" style="border:0"
+  allowfullscreen></iframe>
