Update Trang “info”

--- a/site/data/info.yaml
+++ b/site/data/info.yaml
@@ -5,7 +5,7 @@ phone: '        01222228298'
 phone2: '        01666666732'
 viber: ''
 zalo: ''
-address: 'Duong 51, khu PHU CHANH C, Phuong PHU TAN , THU DAU MOT ,BINH DUONG '
+address: 'Đường 51, Phú Chánh,Phú Tân ,tp MỚI BÌNH DƯƠNG '
 email: thaobinhland@gmail.com
 website: bandatdep.com
 mapUrl: >-
